<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:src="@drawable/girl"
        android:translationZ="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        style="@style/ButtonStyle"
        android:layout_width="300dp"
        android:layout_height="86dp"
        android:text="@string/plus"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/materialButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialButton3"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton3"
        style="@style/ButtonStyle"
        android:layout_width="300dp"
        android:layout_height="86dp"
        android:text="@string/knowing"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/materialButton5"
        app:layout_constraintEnd_toStartOf="@+id/materialButton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton4"
        style="@style/ButtonStyle"
        android:layout_width="300dp"
        android:layout_height="86dp"
        android:text="@string/multiply"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialButton3"
        app:layout_constraintTop_toBottomOf="@+id/materialButton2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton5"
        style="@style/ButtonStyle"
        android:layout_width="300dp"
        android:layout_height="86dp"
        android:text="@string/minus"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/materialButton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton3" />


</androidx.constraintlayout.widget.ConstraintLayout>